--- a/src/Components/HeaderBar/Header.css
+++ b/src/Components/HeaderBar/Header.css
@@ -1,7 +1,32 @@
 .Header__mainContainer {
-    height: 70px;
+    height: 80px;
     width: 100%;
     max-width: 100%;
     border: 1px solid black;
     box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items:center ;
+    padding: 10px;
+}
+
+
+
+.Header__leftDiv span{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    
+}
+
+.Header__mainContainer__profileImage{
+height: 30px;
+width: 30px;
+}
+.Header__mainContainer_downIcon{
+    height: 20px;
+    width: 20px;
 }
