--- a/src/Components/HeaderBar/Header.css
+++ b/src/Components/HeaderBar/Header.css
@@ -2,7 +2,7 @@
     height: 80px;
     width: 100%;
     max-width: 100%;
-    border: 1px solid black;
+    border: 1px solid #ccc;
     box-sizing: border-box;
     display: flex;
     flex-direction: row;
