--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -3,6 +3,7 @@
     height: 100vh; /* Full height of the viewport */
     width: 100vw; /* Full width of the viewport */
     
+    
   }
   
   .Dashboard__content {
@@ -21,4 +22,49 @@
     width: 100%; /* Full width within the content area */
     border-bottom: 1px solid black;
   }
+
+  .Dashboard__searchEmployees{
+    padding: 20px;
+    border-bottom:  1px solid #ccc;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+  
+  }
+
+  .Dashboard__searchEmployees input{
+    height: 35px;
+    width: 300px;
+    box-sizing: border-box;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+
+  .Dashboard__displayCards button{
+    height: 35px;
+    width: 100px;
+    background-color: rgb(59 130 246);
+    border: none;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+  .Dashboard__displayCards button:hover{
+    background-color:rgb(20 100 230);
+  }
+
+  .Dashboard__dataCards {
+    height: 300px;
+    width: calc(100% - 40px); /* Adjust width to ensure there's enough space without triggering overflow */
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-top: 30px;
+    padding-left: 20px; /* Add padding instead of position relative for a cleaner shift */
+    box-sizing: border-box; /* Ensure padding and width are handled correctly */
+    overflow-y: auto; /* Allow vertical scrolling if necessary */
+  }
+  
   
