--- a/src/Components/DataCards/DataCards.css
+++ b/src/Components/DataCards/DataCards.css
@@ -1,25 +1,38 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
-.DataCards__mainContainer{
-    height: 170px;
-    width: 280px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    font-family: "Montserrat", serif;
-    font-optical-sizing: auto;
+.DataCards__mainContainer {
+  height: 170px;
+  width: 280px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  font-family: "Montserrat", serif;
+  font-optical-sizing: auto;
 }
 
-.DataCard__DataType{
-font-size: 23px;
-margin-left: 20px;
-font-weight: 600;
+.DataCard__DataType {
+  font-size: 23px;
+  margin-left: 20px;
+  font-weight: 600;
 }
 
-.DataCard__dataNumber{
-    margin-left: 140px;
-    font-size: 30px;
-    margin-top: 0px;
+.DataCard__dataNumber {
+  margin-left: 100px;
+  font-size: 40px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  font-weight: 500;
+}
+
+.DataCards__percentageSpan {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+ gap: 10px;
+}
+.DataCards__percentageSpan  {
+  font-size: 20px;
+  font-weight: 500;
 }
