--- a/src/pages/Admin/Home/Enterprise/EnterpriseDetails.css
+++ b/src/pages/Admin/Home/Enterprise/EnterpriseDetails.css
@@ -117,3 +117,21 @@
   border: 1px solid #ccc;
   border-radius: 5px;
 }
+
+.EnterpriseDetails__saveButton{
+  margin-left: 20px;
+  height: 40px;
+  width: 150px;
+  border: 1px solid #1e6ed0 ;
+  background-color: white;
+  color: black;
+  border-radius: 5px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.EnterpriseDetails__saveButton:hover{
+  background-color: rgb(59 130 246);
+color: white;
+}
